# python-extractor-utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Jenkinsfile  Pipfile  README.md  codecov.yml  example-config.yaml  guide.md  pyproject.toml  run_tests.sh  setup.py  tox.ini
.claude/commands/: run-tests.md
.github/: CODEOWNERS  renovate.json
.github/workflows/: release.yaml  test_and_build.yml
cognite/configtools/: util.py  validator.py
cognite/examples/unstable/: my_extractor.py
cognite/examples/unstable/extractors/simple_extractor/: main.py
cognite/examples/unstable/extractors/simple_extractor/config/: config.yaml  connection_config.yaml
cognite/extractors/configtools/: util.py  validator.py
cognite/extractorutils/: __init__.py  _extensions.py  _inner_util.py  authentication.py  base.py  configtools.py  exceptions.py  extraction_pipelines.py  logging_prometheus.py  long_livinig_client.py  metrics.py  middleware.py  retry.py  statestore.py  threading.py  throttle.py  uploader.py  uploader_extractor.py  uploader_types.py  util.py
cognite/extractorutils/configtools/: __init__.py  _util.py  configtools.py  elements.py  loaders.py  validators.py
cognite/extractorutils/statestore/: __init__.py  _base.py  hashing.py  watermark.py
cognite/extractorutils/unstable/: __init__.py
cognite/extractorutils/unstable/configuration/: __init__.py  exceptions.py  loaders.py  models.py
cognite/extractorutils/unstable/core/: __init__.py  __main__.py  _bounded_reader.py  _dto.py  _log_upload_action.py  _messaging.py  actions.py  base.py  checkin_worker.py  errors.py  logger.py  metrics.py  restart_policy.py  runtime.py  tasks.py  throttle.py
cognite/extractorutils/unstable/scheduling/: __init__.py  _scheduler.py  _schedules.py
cognite/extractorutils/uploader/: __init__.py  _base.py  _metrics.py  assets.py  data_modeling.py  events.py  files.py  raw.py  time_series.py  upload_failure_handler.py
cognite/package_template/: __init__.py  package_template.py
cognite_dict_validator/: util.py  validator.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  configs.rst  docs.rst  index.rst  package.rst  quickstart.rst  read_csv.rst  remoteconfigs.rst  uploader.rst
schema/: base_config.schema.json  cognite_config.schema.json  either_id.schema.json  logging_config.schema.json  metrics_config.schema.json  state_store_config.schema.json
schema/docs/: envsub.md  keyvault.md  remote_tip.md
schema/unstable/: connection_config.schema.json  either_id.schema.json  extractor_config.json  extractor_config.schema.json  log_handler_config.schema.json  metrics_config.schema.json  retries_config.schema.json  schedule_config.schema.json  state_store_config.schema.json
tests/: auth.py  conftest.py  test_schemas.sh
tests/test_unstable/: conftest.py  test_action_dispatch.py  test_action_registration.py  test_actions.py  test_base.py  test_bounded_reader.py  test_certificate_auth_integration.py  test_checkin_worker.py  test_checkin_worker_actions.py  test_configuration.py  test_dto.py  test_errors.py  test_is_dev_cluster.py  test_log_upload_action.py  test_logger.py  test_metrics.py  test_runtime.py  test_scheduler.py  test_task_context.py  test_throttle.py
tests/tests_integration/: dummyconfig_keyvault_remote.yaml  test_assets_integration.py  test_cdf_upload_integration.py  test_cdm_time_series_integration.py  test_certificate_auth_integration.py  test_configtools.py  test_configtools_integration.py  test_data_modeling_queue.py  test_events_integration.py  test_file_2.txt  test_file_integration.py  test_metrics_integration.py  test_raw_integration.py  test_time_series_integration.py
tests/tests_unit/: dummyconfig.yaml  dummyconfig_keyvault.yaml  greek_dummy_config.yaml  test_authentication.py  test_base.py  test_cdf_upload_queues.py  test_certificate_auth.py  test_configtools.py  test_extensions_base.py  test_extraction_pipelines.py  test_foo.py  test_inner_util.py  test_metrics.py  test_middleware.py  test_pubsub_upload_queue.py  test_statestore.py  test_uploader_extractor.py  test_util.py  test_validator.py
unit_tests/: test_util.py  test_validator.py
