[tool.poetry]
name = "cognite-extractor-utils"
version = "7.5.4"
description = "Utilities for easier development of extractors for CDF"
authors = ["Mathias Lohne <mathias.lohne@cognite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cognitedata/python-extractor-utils"

packages = [
    { include="cognite", from="." },
]

[tool.ruff]
select = ["E", "F", "I", "T20", "S", "B"]
ignore = ["S104", "S303", "S311"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "T201", "S105", "S106", "S608", "E501", "S113", "F841", "B017"]
"**/__init__.py" = ["F401"]
"docs/*" = ["E402"]

[tool.ruff.isort]
known-third-party = ["alembic"]

[tool.pytest.ini_options]
markers = [
    "unstable: tests for the unstable package (deselect with '-m \"not unstable\"')",
]

[tool.mypy]
pretty = true
check_untyped_defs = true
ignore_missing_imports = false
disallow_untyped_defs = true
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = "tests/*"

[tool.poetry.dependencies]
python = "^3.9.0"
cognite-sdk = "^7.59.0"
prometheus-client = ">0.7.0, <=1.0.0"
arrow = "^1.0.0"
pyyaml = ">=5.3.0, <7"
dacite = "^1.6.0"
psutil = "^6.0.0"
decorator = "^5.1.1"
more-itertools = "^10.0.0"
typing-extensions = ">=3.7.4, <5"
python-dotenv = "^1.0.0"
azure-identity = "^1.14.0"
azure-keyvault-secrets = "^4.7.0"
orjson = "^3.10.3"
httpx = "^0.27.0"
pydantic = "^2.8.2"
pyhumps = "^3.8.0"
croniter = "^5.0.0"

[tool.poetry.extras]
experimental = ["cognite-sdk-experimental"]

[tool.poetry.group.dev.dependencies]
mypy = "1.13.0"
ruff = "^0.7.0"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^3.0.0"
pre-commit = "^4.0.0"
SecretStorage = "^3.1.2"
twine = "^5.0.0"
pytest-order = "^1.0.1"
parameterized = "*"
requests = "^2.31.0"
types-requests = "^2.31.0.20240125"
httpx = "^0.27.0"
faker = "^33.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
